--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,9 +19,8 @@ services:
       MYSQL_DATABASE: blogdb
       MYSQL_USER: julian
       MYSQL_PASSWORD: julianpassword
-    #command: --init-file /data/application/init.sql
     volumes:
-    #  - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
       - db_data:/var/lib/mysql
 
 volumes:
